--- a/config/training_config.yaml
+++ b/config/training_config.yaml
@@ -37,8 +37,8 @@ training:
     # Sigma of the window function used to compute the centroids. Default Euclid value is 2.5
     sigma_centroid_window: 2.5
 
-    # Pixel Reference Shifts
-    reference_shifts = [-1/3, -1/3]
+    # Default reference_shifts value for observations at Euclid conditions, i.e., pixel sampling and telescope parameters.
+    reference_shifts: [-1/3, -1/3]
 
     # Rotation angle (in degrees) for the obscuration mask.  
     # Must be a multiple of 90 (0, 90, 180, 270, etc.).  
