--- a/config/metrics_config.yaml
+++ b/config/metrics_config.yaml
@@ -141,6 +141,15 @@ metrics:
     # Batch size to use for the evaluation.
     batch_size: 16
   
+    # Metrics and model evaluation configuration
+    optimizer:
+      name: 'adam'           # Only standard Adam used for metrics
+      learning_rate: 1e-2
+      beta_1: 0.9
+      beta_2: 0.999
+      epsilon: 1e-07
+      amsgrad: False
+
     # Save RMS error for each super resolved PSF in the test dataset in addition to the mean across the FOV."
     # Flag to get Super-Resolution pixel PSF RMSE for each individual test star. 
     # If `True`, the relative pixel RMSE of each star is added to ther saving dictionary.
