Update documentation for v3.0.0: replace modules.rst with api.rst, clean up submodule docs, update conf.py, and update pyproject.toml version

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -83,6 +83,12 @@ quote-style = "double"
 indent-style = "space"
 line-ending = "lf"
 
+# Set per-file-ignores
+[tool.ruff.lint.per-file-ignores]
+"__init__.py" = ["F401", "D"]
+"*_test.py" = ["D"]
+"conftest.py" = ["D"]
+
 
 [tool.pytest.ini_options]
 addopts = [
