--- a/pyproject.toml
+++ b/pyproject.toml
@@ -86,6 +86,13 @@ line-ending = "lf"
 [tool.setuptools.package-data]
 "wf_psf.config" = ["*.conf"]
 
+# Set per-file-ignores
+[tool.ruff.lint.per-file-ignores]
+"__init__.py" = ["F401", "D"]
+"*_test.py" = ["D"]
+"conftest.py" = ["D"]
+
+
 [tool.pytest.ini_options]
 addopts = [
     "--verbose",
