--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -39,4 +39,4 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3.5.9
         with:
            github_token: ${{ secrets.GITHUB_TOKEN }}
-           publish_dir: docs/build
+           publish_dir: docs/build/html
