--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -32,11 +32,11 @@ jobs:
      
       - name: Build API documentation
         run: |
-          sphinx-apidoc -Mfeo docs/source src/wf_psf
-          sphinx-build docs/source docs/build
+          make -C docs clean
+          make -C docs html
        
       - name: Deploy API documentation
         uses: peaceiris/actions-gh-pages@v3.5.9
         with:
            github_token: ${{ secrets.GITHUB_TOKEN }}
-           publish_dir: docs/build
+           publish_dir: docs/build/html
