--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,5 @@
-# Environment file for WaveDiff
+# WaveDiff v3.0.0 release environment
+# Tested on Jean-Zay HPC. NumPy 1.26.x is installed via pip.
 # This file reflects the dependency constraints defined in pyproject.toml
 # and is not a fully pinned development environment.
 name: wavediff-env
@@ -6,11 +7,11 @@ channels:
   - conda-forge
 dependencies:
   - python>=3.9,<3.12
-  - numpy>=1.26.4,<2.0
   - scipy
   - tensorflow=2.11.0
   - pip
   - pip:
+      - numpy>=1.26,<2.0
       - tensorflow-addons
       - tensorflow-estimator
       - zernike
